5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1578_1330.log
== SUBMITION (2019-03-12 14:28:43) 
-- CODE:
print(41,666)
-- EXECUTION TIME:
0.14701
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:28:52) 
-- CODE:
print(41,66)
-- EXECUTION TIME:
0.135476
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:29:05) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.142966
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:29:49) 
-- CODE:
round(41.66)
-- EXECUTION TIME:
0.130816
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:31:53) 
-- CODE:
print(round41.66)
-- EXECUTION TIME:
0.125173
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(round41.66)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:36:13) 
-- CODE:
print()x.n
-- EXECUTION TIME:
0.215697
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print()x.n
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:36:32) 
-- CODE:
print()round (x.n)
-- EXECUTION TIME:
0.197872
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print()round (x.n)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:43:32) 
-- CODE:
print( round (41.xn))
-- EXECUTION TIME:
0.152542
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print( round (41.xn))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:58:29) 
-- CODE:
print( round(250/6,2))
-- EXECUTION TIME:
0.213816
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:58:30) 
-- CODE:
print( round(250/6,2))
-- EXECUTION TIME:
0.144866
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
